--- a/Dataloader and CNN.ipynb
+++ b/Dataloader and CNN.ipynb
@@ -7,24 +7,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Imports for Dataset class\n",
+    "# Imports\n",
     "import os\n",
     "from PIL import Image\n",
     "import torch\n",
     "from torch.utils.data import Dataset\n",
     "from torchvision import transforms\n",
     "\n",
-    "# Imports for dataloader\n",
     "from torch.utils.data import DataLoader\n",
     "\n",
-    "# Imports for CNN\n",
     "import torch\n",
     "import torch.nn as nn\n",
     "import torch.optim as optim\n",
     "import torch.nn.functional as F\n",
     "from tqdm import tqdm\n",
     "\n",
-    "# Imports for plotting\n",
     "import matplotlib.pyplot as plt\n",
     "from sklearn.metrics import confusion_matrix, ConfusionMatrixDisplay\n",
     "import numpy as np"
@@ -49,18 +46,17 @@
     "        self.transform = transform\n",
     "        self.image_paths = []\n",
     "        self.labels = []\n",
-    "        self.label_mapping = {}  # Mapping from original labels to continuous range\n",
+    "        self.label_mapping = {}  \n",
     "\n",
-    "        # Collect all image paths and labels\n",
+    "        # collect image paths\n",
     "        for filename in os.listdir(root_dir):\n",
     "            if filename.startswith('color_'):\n",
-    "                # Extract label from filename\n",
     "                parts = filename.split('_')\n",
-    "                label = int(parts[1])  # Assuming the label is the second part of the filename\n",
+    "                label = int(parts[1])  # extract label\n",
     "                self.image_paths.append(os.path.join(root_dir, filename))\n",
     "                self.labels.append(label)\n",
     "\n",
-    "        # Create a continuous label mapping\n",
+    "        # continuous label mapping\n",
     "        unique_labels = sorted(set(self.labels))\n",
     "        self.label_mapping = {label: idx for idx, label in enumerate(unique_labels)}\n",
     "        self.labels = [self.label_mapping[label] for label in self.labels]\n",
@@ -84,11 +80,11 @@
     "\n",
     "root_dir = 'dataset5_50x50_split/'\n",
     "transform = transforms.Compose([\n",
-    "    transforms.ToTensor(),  # Convert image to tensor\n",
-    "    transforms.Normalize((0.5,), (0.5,))  # Normalize to [-1, 1] range for grayscale\n",
+    "    transforms.ToTensor(),  \n",
+    "    transforms.Normalize((0.5,), (0.5,))  # normalize\n",
     "])\n",
     "\n",
-    "# Create dataset instances\n",
+    "# create datasets\n",
     "train_dataset = ASLDataset(root_dir=os.path.join(root_dir, 'train'), transform=transform)\n",
     "val_dataset = ASLDataset(root_dir=os.path.join(root_dir, 'val'), transform=transform)\n",
     "test_dataset = ASLDataset(root_dir=os.path.join(root_dir, 'test'), transform=transform)\n"
@@ -101,7 +97,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Create DataLoader instances\n",
+    "# create dataloaders\n",
     "train_loader = DataLoader(train_dataset, batch_size=32, shuffle=True)\n",
     "val_loader = DataLoader(val_dataset, batch_size=32, shuffle=False)\n",
     "test_loader = DataLoader(test_dataset, batch_size=32, shuffle=False)"
@@ -114,7 +110,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Class for CNN. Can be updated to include multi-headed input\n",
+    "# CNN class\n",
     "class SimpleCNN(nn.Module):\n",
     "    def __init__(self, num_classes=24):\n",
     "        super(SimpleCNN, self).__init__()\n",
@@ -140,7 +136,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Function to infer number of classes\n",
+    "# infer number of classes\n",
     "def get_num_classes(dataset):\n",
     "    \"\"\"\n",
     "    Get the number of unique classes in the dataset.\n",
@@ -324,7 +320,6 @@
     }
    ],
    "source": [
-    "# Initialize the model, loss function, and optimizer\n",
     "num_classes = get_num_classes(train_dataset)\n",
     "model = SimpleCNN(num_classes=num_classes)\n",
     "print(\"Model initialized\")\n",
@@ -332,14 +327,14 @@
     "optimizer = optim.Adam(model.parameters(), lr=0.001)\n",
     "print(\"Optimizer initialized\")\n",
     "\n",
-    "# Initialize lists to track metrics\n",
+    "# metric tracking\n",
     "train_losses = []\n",
     "val_losses = []\n",
     "train_accuracies = []\n",
     "val_accuracies = []\n",
     "\n",
     "\n",
-    "# Training loop with tqdm progress bar\n",
+    "# Training loop\n",
     "num_epochs = 10\n",
     "for epoch in range(num_epochs):\n",
     "    model.train()\n",
@@ -356,7 +351,6 @@
     "        running_loss += loss.item()\n",
     "        train_loader_tqdm.set_postfix(loss=running_loss/len(train_loader))\n",
     "        \n",
-    "        # Calculate training accuracy\n",
     "        _, predicted = torch.max(outputs.data, 1)\n",
     "        total_train += labels.size(0)\n",
     "        correct_train += (predicted == labels).sum().item()\n",
@@ -368,7 +362,7 @@
     "    \n",
     "    print(f\"Epoch {epoch+1}, Loss: {epoch_loss}, Accuracy: {train_accuracy}%\")\n",
     "\n",
-    "    # Validation loop\n",
+    "    # val loop\n",
     "    model.eval()\n",
     "    running_val_loss = 0.0\n",
     "    correct_val = 0\n",
@@ -413,7 +407,7 @@
     }
    ],
    "source": [
-    "# Plot training and validation loss\n",
+    "# Plot loss\n",
     "plt.figure(figsize=(12, 5))\n",
     "\n",
     "plt.subplot(1, 2, 1)\n",
@@ -424,7 +418,7 @@
     "plt.title('Training and Validation Loss Over Epochs')\n",
     "plt.legend()\n",
     "\n",
-    "# Plot training and validation accuracy\n",
+    "# Plot accuracy\n",
     "plt.subplot(1, 2, 2)\n",
     "plt.plot(train_accuracies, label='Training Accuracy')\n",
     "plt.plot(val_accuracies, label='Validation Accuracy')\n",
@@ -455,7 +449,7 @@
     }
    ],
    "source": [
-    "# Generate confusion matrix\n",
+    "# confusion matrix\n",
     "cm = confusion_matrix(all_labels, all_predictions)\n",
     "cmd = ConfusionMatrixDisplay(cm, display_labels=[i for i in range(num_classes)])\n",
     "fig, ax = plt.subplots(figsize=(10, 10))  # Adjust the size\n",
