--- a/Train-val-test split.ipynb
+++ b/Train-val-test split.ipynb
@@ -21,12 +21,6 @@
    "outputs": [],
    "source": [
     "def create_directory_structure(base_dir):\n",
-    "    \"\"\"\n",
-    "    Create the directory structure for the dataset.\n",
-    "\n",
-    "    Args:\n",
-    "        base_dir (str): Base directory where train, val, and test directories will be created.\n",
-    "    \"\"\"\n",
     "    for dataset in ['train', 'val', 'test']:\n",
     "        path = os.path.join(base_dir, dataset)\n",
     "        os.makedirs(path, exist_ok=True)"
@@ -40,16 +34,6 @@
    "outputs": [],
    "source": [
     "def generate_unique_filename(file_path, target_dir):\n",
-    "    \"\"\"\n",
-    "    Generate a unique filename to prevent overwriting.\n",
-    "\n",
-    "    Args:\n",
-    "        file_path (str): The original file path.\n",
-    "        target_dir (str): The target directory where the file will be copied.\n",
-    "\n",
-    "    Returns:\n",
-    "        str: A unique filename.\n",
-    "    \"\"\"\n",
     "    file_name, file_ext = os.path.splitext(os.path.basename(file_path))\n",
     "    # Create a unique identifier based on the original file path\n",
     "    unique_id = hashlib.md5(file_path.encode()).hexdigest()\n",
@@ -65,14 +49,6 @@
    "outputs": [],
    "source": [
     "def copy_files(file_list, source_base_dir, target_dir):\n",
-    "    \"\"\"\n",
-    "    Copy files from source to target directory with unique filenames.\n",
-    "\n",
-    "    Args:\n",
-    "        file_list (list): List of file paths relative to the source base directory.\n",
-    "        source_base_dir (str): Source base directory.\n",
-    "        target_dir (str): Target directory where files will be copied.\n",
-    "    \"\"\"\n",
     "    for file_path in file_list:\n",
     "        source_path = os.path.join(source_base_dir, file_path)\n",
     "        unique_filename = generate_unique_filename(file_path, target_dir)\n",
@@ -99,13 +75,12 @@
    ],
    "source": [
     "# Define the base directory and user/letter directories\n",
-    "source_base_dir = 'dataset5_preprocessed_50x50/'  # Original dataset directory\n",
-    "target_base_dir = 'dataset5_50x50_split/'  # New directory for split data\n",
+    "source_base_dir = 'dataset5_preprocessed_50x50/'  \n",
+    "target_base_dir = 'dataset5_50x50_split/'\n",
     "\n",
-    "# Create the directory structure for train, val, test\n",
     "create_directory_structure(target_base_dir)\n",
     "\n",
-    "# Users and letters in the dataset\n",
+    "# Users and letters\n",
     "users = ['A', 'B', 'C', 'D', 'E']\n",
     "letters = [chr(i) for i in range(ord('a'), ord('z') + 1) if chr(i) not in ['j', 'z']]\n",
     "\n",
@@ -130,7 +105,7 @@
     "train_paths, test_paths = train_test_split(file_paths, test_size=(1 - train_ratio), random_state=random_seed)\n",
     "val_paths, test_paths = train_test_split(test_paths, test_size=(test_ratio / (val_ratio + test_ratio)), random_state=random_seed)\n",
     "\n",
-    "# Copy the files to the respective directories\n",
+    "# Copy the files to directories\n",
     "copy_files(train_paths, source_base_dir, os.path.join(target_base_dir, 'train'))\n",
     "copy_files(val_paths, source_base_dir, os.path.join(target_base_dir, 'val'))\n",
     "copy_files(test_paths, source_base_dir, os.path.join(target_base_dir, 'test'))\n",
