--- a/landmark_preprocess-new data.ipynb
+++ b/landmark_preprocess-new data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "3d7ed0db",
    "metadata": {},
    "outputs": [],
@@ -14,13 +14,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "079f3c5a",
    "metadata": {},
    "outputs": [],
    "source": [
     "def preprocess_image(image_path):\n",
-    "    # Resize and normalize the image\n",
     "    image = Image.open(image_path)\n",
     "    resized_image = image.resize((224, 224))\n",
     "    normalized_image = np.array(resized_image) / 255.0\n",
@@ -29,36 +28,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "fe174987",
    "metadata": {},
    "outputs": [],
    "source": [
     "def process_directory(input_dir, output_dir):\n",
-    "    \"\"\"\n",
-    "    Processes all images in the specified directory and its subdirectories,\n",
-    "    applying the preprocessing steps and saving the results to the output directory,\n",
-    "    maintaining the original directory structure.\n",
-    "\n",
-    "    Args:\n",
-    "        input_dir (str): Path to the input directory containing images.\n",
-    "        output_dir (str): Path to the output directory where preprocessed images will be saved.\n",
-    "    \"\"\"\n",
     "    for root, _, files in os.walk(input_dir):\n",
     "        for file in files:\n",
-    "            # Process only color images with specified file extensions\n",
-    "            # for this dataset all images are color\n",
     "            if file.lower().endswith(('.png', '.jpg', '.jpeg', '.tiff', '.bmp', '.gif')):\n",
     "                file_path = os.path.join(root, file)\n",
     "                \n",
-    "                # Determine the new file path in the output directory\n",
     "                relative_path = os.path.relpath(root, input_dir)\n",
     "                output_path = os.path.join(output_dir, relative_path, file)\n",
     "                \n",
-    "                # Ensure the output directory exists\n",
     "                os.makedirs(os.path.dirname(output_path), exist_ok=True)\n",
     "                \n",
-    "                # Preprocess and save the image\n",
+    "                # Preprocess and save \n",
     "                try:\n",
     "                    processed_image = preprocess_image(file_path)\n",
     "                    processed_image.save(output_path)\n",
@@ -68,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "311bbca5",
    "metadata": {},
    "outputs": [
@@ -112,7 +98,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
