--- a/landmark_split-new data.ipynb
+++ b/landmark_split-new data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "id": "07a0036e",
    "metadata": {},
    "outputs": [],
@@ -16,19 +16,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "93ec0c7a",
    "metadata": {},
    "outputs": [],
    "source": [
     "def create_directory_structure(output_dir):\n",
     "    \"\"\"\n",
-    "    Creates the directory structure for train/val/test splits with grayscale and color subdirectories.\n",
-    "\n",
-    "    Args:\n",
-    "    output_dir (str): The base directory where the train/val/test directories will be created.\n",
-    "\n",
-    "    Directory structure created:\n",
+    "    Creates following dir struct:\n",
     "    output_dir/\n",
     "        train/\n",
     "            grayscale/\n",
@@ -51,21 +46,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "d912b9cc",
    "metadata": {},
    "outputs": [],
    "source": [
     "def get_all_files(root_dir):\n",
-    "    \"\"\"\n",
-    "    Recursively gets all files from the nested directory structure.\n",
-    "    \n",
-    "    Args:\n",
-    "    root_dir (str): Root directory to search for files.\n",
-    "\n",
-    "    Returns:\n",
-    "    List of file paths.\n",
-    "    \"\"\"\n",
     "    all_files = []\n",
     "    for subdir, _, files in os.walk(root_dir):\n",
     "        for file in files:\n",
@@ -75,21 +61,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "aafe7a92",
    "metadata": {},
    "outputs": [],
    "source": [
     "def handle_collision(filepath):\n",
-    "    \"\"\"\n",
-    "    Handle filename collision by appending a number to the filename.\n",
-    "\n",
-    "    Args:\n",
-    "    filepath (str): The original file path.\n",
-    "\n",
-    "    Returns:\n",
-    "    str: A file path that does not exist by appending numbers if necessary.\n",
-    "    \"\"\"\n",
     "    base, extension = os.path.splitext(filepath)\n",
     "    counter = 1\n",
     "    new_filepath = filepath\n",
@@ -101,22 +78,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 5,
    "id": "3c8998e1",
    "metadata": {},
    "outputs": [],
    "source": [
     "def move_files(indices, grayscale_images, color_images, output_dir, split):\n",
-    "    \"\"\"\n",
-    "    Move files to the specified directory split and handle filename collisions.\n",
-    "\n",
-    "    Args:\n",
-    "    indices (list): List of indices for the files to be moved.\n",
-    "    grayscale_images (list): List of grayscale image file paths.\n",
-    "    color_images (list): List of color image file paths.\n",
-    "    output_dir (str): Base directory where the split data will be saved.\n",
-    "    split (str): The split type ('train', 'val', or 'test').\n",
-    "    \"\"\"\n",
     "    os.makedirs(os.path.join(output_dir, split, 'grayscale'), exist_ok=True)\n",
     "    os.makedirs(os.path.join(output_dir, split, 'color'), exist_ok=True)\n",
     "    \n",
@@ -130,7 +97,6 @@
     "        gray_letter = gray_src.split(\"/\")[1]\n",
     "        color_letter = color_src.split(\"/\")[1]\n",
     "\n",
-    "        # Add letter to beginning of filename for label identification\n",
     "        gray_filename = gray_letter + \"_\" + gray_filename\n",
     "        color_filename = color_letter + \"_\" + color_filename\n",
     "        \n",
@@ -148,25 +114,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 6,
    "id": "d2b1e54e",
    "metadata": {},
    "outputs": [],
    "source": [
     "def split_data(grayscale_dir, color_dir, output_dir, train_ratio=0.7, val_ratio=0.15):\n",
     "    \"\"\"\n",
-    "    Splits the dataset into train, validation, and test sets and moves the images to the corresponding directories.\n",
-    "\n",
-    "    Args:\n",
-    "    grayscale_dir (str): Directory containing grayscale images.\n",
-    "    color_dir (str): Directory containing color images.\n",
-    "    output_dir (str): Base directory where the split data will be saved.\n",
-    "    train_ratio (float): Proportion of the data to be used for training. Default is 0.7.\n",
-    "    val_ratio (float): Proportion of the data to be used for validation. Default is 0.15.\n",
-    "\n",
-    "    The remaining data will be used for testing.\n",
-    "\n",
-    "    Directory structure created:\n",
+    "    Splits:\n",
     "    output_dir/\n",
     "        train/\n",
     "            grayscale/\n",
@@ -178,18 +133,15 @@
     "            grayscale/\n",
     "            color/\n",
     "    \"\"\"\n",
-    "    # Get list of all images\n",
     "    grayscale_images = get_all_files(grayscale_dir)\n",
     "    color_images = get_all_files(color_dir)\n",
     "\n",
-    "    # Ensure the lists are the same length\n",
     "    assert len(grayscale_images) == len(color_images), \"Mismatch in the number of grayscale and color images\"\n",
     "    \n",
-    "    # Shuffle the indices\n",
     "    indices = list(range(len(grayscale_images)))\n",
     "    random.shuffle(indices)\n",
     "    \n",
-    "    # Split the indices\n",
+    "    # Split\n",
     "    train_split = int(train_ratio * len(indices))\n",
     "    val_split = int((train_ratio + val_ratio) * len(indices))\n",
     "    \n",
@@ -205,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 7,
    "id": "4856b25c",
    "metadata": {},
    "outputs": [
@@ -213,9 +165,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Moving train files: 100%|█████████████| 133856/133856 [01:46<00:00, 1257.93it/s]\n",
-      "Moving val files: 100%|█████████████████| 28684/28684 [00:21<00:00, 1362.18it/s]\n",
-      "Moving test files: 100%|████████████████| 28684/28684 [00:19<00:00, 1461.83it/s]\n"
+      "Moving train files: 100%|██████████████| 133857/133857 [02:55<00:00, 764.86it/s]\n",
+      "Moving val files: 100%|██████████████████| 28684/28684 [00:34<00:00, 824.30it/s]\n",
+      "Moving test files: 100%|█████████████████| 28684/28684 [00:34<00:00, 820.01it/s]\n"
      ]
     }
    ],
@@ -249,7 +201,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
