--- a/landmark_split.ipynb
+++ b/landmark_split.ipynb
@@ -23,12 +23,7 @@
    "source": [
     "def create_directory_structure(output_dir):\n",
     "    \"\"\"\n",
-    "    Creates the directory structure for train/val/test splits with grayscale and color subdirectories.\n",
-    "\n",
-    "    Args:\n",
-    "    output_dir (str): The base directory where the train/val/test directories will be created.\n",
-    "\n",
-    "    Directory structure created:\n",
+    "    Creates following dir struct:\n",
     "    output_dir/\n",
     "        train/\n",
     "            grayscale/\n",
@@ -57,15 +52,6 @@
    "outputs": [],
    "source": [
     "def get_all_files(root_dir):\n",
-    "    \"\"\"\n",
-    "    Recursively gets all files from the nested directory structure.\n",
-    "    \n",
-    "    Args:\n",
-    "    root_dir (str): Root directory to search for files.\n",
-    "\n",
-    "    Returns:\n",
-    "    List of file paths.\n",
-    "    \"\"\"\n",
     "    all_files = []\n",
     "    for subdir, _, files in os.walk(root_dir):\n",
     "        for file in files:\n",
@@ -81,15 +67,6 @@
    "outputs": [],
    "source": [
     "def handle_collision(filepath):\n",
-    "    \"\"\"\n",
-    "    Handle filename collision by appending a number to the filename.\n",
-    "\n",
-    "    Args:\n",
-    "    filepath (str): The original file path.\n",
-    "\n",
-    "    Returns:\n",
-    "    str: A file path that does not exist by appending numbers if necessary.\n",
-    "    \"\"\"\n",
     "    base, extension = os.path.splitext(filepath)\n",
     "    counter = 1\n",
     "    new_filepath = filepath\n",
@@ -107,16 +84,6 @@
    "outputs": [],
    "source": [
     "def move_files(indices, grayscale_images, color_images, output_dir, split):\n",
-    "    \"\"\"\n",
-    "    Move files to the specified directory split and handle filename collisions.\n",
-    "\n",
-    "    Args:\n",
-    "    indices (list): List of indices for the files to be moved.\n",
-    "    grayscale_images (list): List of grayscale image file paths.\n",
-    "    color_images (list): List of color image file paths.\n",
-    "    output_dir (str): Base directory where the split data will be saved.\n",
-    "    split (str): The split type ('train', 'val', or 'test').\n",
-    "    \"\"\"\n",
     "    os.makedirs(os.path.join(output_dir, split, 'grayscale'), exist_ok=True)\n",
     "    os.makedirs(os.path.join(output_dir, split, 'color'), exist_ok=True)\n",
     "    \n",
@@ -147,18 +114,7 @@
    "source": [
     "def split_data(grayscale_dir, color_dir, output_dir, train_ratio=0.7, val_ratio=0.15):\n",
     "    \"\"\"\n",
-    "    Splits the dataset into train, validation, and test sets and moves the images to the corresponding directories.\n",
-    "\n",
-    "    Args:\n",
-    "    grayscale_dir (str): Directory containing grayscale images.\n",
-    "    color_dir (str): Directory containing color images.\n",
-    "    output_dir (str): Base directory where the split data will be saved.\n",
-    "    train_ratio (float): Proportion of the data to be used for training. Default is 0.7.\n",
-    "    val_ratio (float): Proportion of the data to be used for validation. Default is 0.15.\n",
-    "\n",
-    "    The remaining data will be used for testing.\n",
-    "\n",
-    "    Directory structure created:\n",
+    "    Splits:\n",
     "    output_dir/\n",
     "        train/\n",
     "            grayscale/\n",
@@ -170,18 +126,15 @@
     "            grayscale/\n",
     "            color/\n",
     "    \"\"\"\n",
-    "    # Get list of all images\n",
     "    grayscale_images = get_all_files(grayscale_dir)\n",
     "    color_images = get_all_files(color_dir)\n",
     "\n",
-    "    # Ensure the lists are the same length\n",
     "    assert len(grayscale_images) == len(color_images), \"Mismatch in the number of grayscale and color images\"\n",
     "    \n",
-    "    # Shuffle the indices\n",
     "    indices = list(range(len(grayscale_images)))\n",
     "    random.shuffle(indices)\n",
     "    \n",
-    "    # Split the indices\n",
+    "    # Split \n",
     "    train_split = int(train_ratio * len(indices))\n",
     "    val_split = int((train_ratio + val_ratio) * len(indices))\n",
     "    \n",
