--- a/Dataloader and PaperCNN.ipynb
+++ b/Dataloader and PaperCNN.ipynb
@@ -64,12 +64,6 @@
    "source": [
     "class ASLDataset(Dataset):\n",
     "    def __init__(self, root_dir, transform=None):\n",
-    "        \"\"\"\n",
-    "        Args:\n",
-    "            root_dir (str): Directory with all the images.\n",
-    "            transform (callable, optional): Optional transform to be applied\n",
-    "                                            on a sample.\n",
-    "        \"\"\"\n",
     "        self.root_dir = root_dir\n",
     "        self.transform = transform\n",
     "        self.image_paths = []\n",
@@ -211,17 +205,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Function to infer number of classes\n",
+    "# infer number of classes\n",
     "def get_num_classes(dataset):\n",
-    "    \"\"\"\n",
-    "    Get the number of unique classes in the dataset.\n",
-    "\n",
-    "    Args:\n",
-    "        dataset (Dataset): The dataset to analyze.\n",
-    "\n",
-    "    Returns:\n",
-    "        int: The number of unique classes.\n",
-    "    \"\"\"\n",
     "    unique_labels = set()\n",
     "    for _, label in dataset:\n",
     "        unique_labels.add(label)\n",
@@ -395,7 +380,6 @@
     }
    ],
    "source": [
-    "# Initialize the model, loss function, and optimizer\n",
     "num_classes = get_num_classes(train_dataset)\n",
     "model = PaperCNN(num_classes=num_classes)\n",
     "device = torch.device(\"mps\") if torch.backends.mps.is_available() else torch.device(\"cpu\")\n",
@@ -406,14 +390,14 @@
     "optimizer = optim.Adam(model.parameters(), lr=0.001)\n",
     "print(\"Optimizer initialized\")\n",
     "\n",
-    "# Initialize lists to track metrics\n",
+    "# metric tracking\n",
     "train_losses = []\n",
     "val_losses = []\n",
     "train_accuracies = []\n",
     "val_accuracies = []\n",
     "\n",
     "\n",
-    "# Training loop with tqdm progress bar\n",
+    "# Training loop \n",
     "num_epochs = 10\n",
     "for epoch in range(num_epochs):\n",
     "    model.train()\n",
@@ -422,7 +406,6 @@
     "    total_train = 0\n",
     "    train_loader_tqdm = tqdm(train_loader, desc=f\"Epoch {epoch+1}/{num_epochs}\", unit=\"batch\")\n",
     "    for images, labels in train_loader_tqdm:\n",
-    "        # move images and labels to device\n",
     "        images, labels = images.to(device), labels.to(device)\n",
     "        \n",
     "        optimizer.zero_grad()\n",
@@ -433,7 +416,6 @@
     "        running_loss += loss.item()\n",
     "        train_loader_tqdm.set_postfix(loss=running_loss/len(train_loader))\n",
     "        \n",
-    "        # Calculate training accuracy\n",
     "        _, predicted = torch.max(outputs.data, 1)\n",
     "        total_train += labels.size(0)\n",
     "        correct_train += (predicted == labels).sum().item()\n",
@@ -445,7 +427,7 @@
     "    \n",
     "    print(f\"Epoch {epoch+1}, Loss: {epoch_loss}, Accuracy: {train_accuracy}%\")\n",
     "\n",
-    "    # Validation loop\n",
+    "    # val loop\n",
     "    model.eval()\n",
     "    running_val_loss = 0.0\n",
     "    correct_val = 0\n",
@@ -454,7 +436,6 @@
     "    all_predictions = []\n",
     "    with torch.no_grad():\n",
     "        for images, labels in val_loader:\n",
-    "            # move images and labels to device\n",
     "            images, labels = images.to(device), labels.to(device)\n",
     "            \n",
     "            outputs = model(images)\n",
@@ -495,11 +476,8 @@
    ],
    "source": [
     "import matplotlib.pyplot as plt\n",
-    "\n",
-    "# Set the default font size\n",
     "plt.rcParams.update({'font.size': 14})\n",
     "\n",
-    "# Plot training and validation loss\n",
     "plt.figure(figsize=(12, 5))\n",
     "\n",
     "plt.subplot(1, 2, 1)\n",
@@ -510,7 +488,6 @@
     "plt.title('Training and Validation Loss Over Epochs')\n",
     "plt.legend()\n",
     "\n",
-    "# Plot training and validation accuracy\n",
     "plt.subplot(1, 2, 2)\n",
     "plt.plot(train_accuracies, label='Training Accuracy')\n",
     "plt.plot(val_accuracies, label='Validation Accuracy')\n",
@@ -541,7 +518,6 @@
     }
    ],
    "source": [
-    "# Generate confusion matrix\n",
     "cm = confusion_matrix(all_labels, all_predictions)\n",
     "cmd = ConfusionMatrixDisplay(cm, display_labels=[i for i in range(num_classes)])\n",
     "fig, ax = plt.subplots(figsize=(10, 10))  # Adjust the size\n",
@@ -592,14 +568,11 @@
     }
    ],
    "source": [
-    "# Generate classification report\n",
     "report = classification_report(all_labels, all_predictions, target_names=[f'Class {i}' for i in range(num_classes)], output_dict=True)\n",
     "df_report = pd.DataFrame(report).transpose()\n",
-    "\n",
-    "# Print the classification report as a table\n",
     "print(df_report)\n",
     "\n",
-    "# Save the classification report to a CSV file\n",
+    "# Save to CSV\n",
     "df_report.to_csv('classification_report.csv', index=True)"
    ]
   }
