--- a/Dataloader and PaperCNN_Tuning.ipynb
+++ b/Dataloader and PaperCNN_Tuning.ipynb
@@ -12,24 +12,21 @@
    },
    "outputs": [],
    "source": [
-    "# Imports for Dataset class\n",
+    "# Imports\n",
     "import os\n",
     "from PIL import Image\n",
     "import torch\n",
     "from torch.utils.data import Dataset\n",
     "from torchvision import transforms\n",
     "\n",
-    "# Imports for dataloader\n",
     "from torch.utils.data import DataLoader\n",
     "\n",
-    "# Imports for CNN\n",
     "import torch\n",
     "import torch.nn as nn\n",
     "import torch.optim as optim\n",
     "import torch.nn.functional as F\n",
     "from tqdm import tqdm\n",
     "\n",
-    "# Imports for plotting\n",
     "import matplotlib.pyplot as plt\n",
     "from sklearn.metrics import confusion_matrix, ConfusionMatrixDisplay\n",
     "import numpy as np"
@@ -77,28 +74,19 @@
    "source": [
     "class ASLDataset(Dataset):\n",
     "    def __init__(self, root_dir, transform=None):\n",
-    "        \"\"\"\n",
-    "        Args:\n",
-    "            root_dir (str): Directory with all the images.\n",
-    "            transform (callable, optional): Optional transform to be applied\n",
-    "                                            on a sample.\n",
-    "        \"\"\"\n",
     "        self.root_dir = root_dir\n",
     "        self.transform = transform\n",
     "        self.image_paths = []\n",
     "        self.labels = []\n",
-    "        self.label_mapping = {}  # Mapping from original labels to continuous range\n",
+    "        self.label_mapping = {}  \n",
     "\n",
-    "        # Collect all image paths and labels\n",
     "        for filename in os.listdir(root_dir):\n",
     "            if filename.startswith('color_'):\n",
-    "                # Extract label from filename\n",
     "                parts = filename.split('_')\n",
-    "                label = int(parts[1])  # Assuming the label is the second part of the filename\n",
+    "                label = int(parts[1])  \n",
     "                self.image_paths.append(os.path.join(root_dir, filename))\n",
     "                self.labels.append(label)\n",
     "\n",
-    "        # Create a continuous label mapping\n",
     "        unique_labels = sorted(set(self.labels))\n",
     "        self.label_mapping = {label: idx for idx, label in enumerate(unique_labels)}\n",
     "        self.labels = [self.label_mapping[label] for label in self.labels]\n",
@@ -111,7 +99,7 @@
     "            idx = idx.tolist()\n",
     "\n",
     "        img_path = self.image_paths[idx]\n",
-    "        image = Image.open(img_path).convert('L')  # Ensure image is in grayscale\n",
+    "        image = Image.open(img_path).convert('L')  \n",
     "        label = self.labels[idx]\n",
     "\n",
     "        if self.transform:\n",
@@ -122,11 +110,10 @@
     "\n",
     "root_dir = 'dataset5_50x50_split/'\n",
     "transform = transforms.Compose([\n",
-    "    transforms.ToTensor(),  # Convert image to tensor\n",
-    "    transforms.Normalize((0.5,), (0.5,))  # Normalize to [-1, 1] range for grayscale\n",
+    "    transforms.ToTensor(), \n",
+    "    transforms.Normalize((0.5,), (0.5,))  # image norm\n",
     "])\n",
     "\n",
-    "# Create dataset instances\n",
     "train_dataset = ASLDataset(root_dir=os.path.join(root_dir, 'train'), transform=transform)\n",
     "val_dataset = ASLDataset(root_dir=os.path.join(root_dir, 'val'), transform=transform)\n",
     "test_dataset = ASLDataset(root_dir=os.path.join(root_dir, 'test'), transform=transform)\n"
@@ -144,7 +131,6 @@
    },
    "outputs": [],
    "source": [
-    "# Create DataLoader instances\n",
     "train_loader = DataLoader(train_dataset, batch_size=32, shuffle=True)\n",
     "val_loader = DataLoader(val_dataset, batch_size=32, shuffle=False)\n",
     "test_loader = DataLoader(test_dataset, batch_size=32, shuffle=False)"
@@ -162,7 +148,7 @@
    },
    "outputs": [],
    "source": [
-    "# Class for CNN following paper 1 architecture\n",
+    "# CNN class, paper architecture\n",
     "class PaperCNN(nn.Module):\n",
     "    def __init__(self, num_classes=24, p_dropout = 0.3):\n",
     "        super(PaperCNN, self).__init__()\n",
@@ -218,7 +204,7 @@
     "        x = self.pool(x)\n",
     "#         print(f\"Shape after pool: {x.shape}\")\n",
     "        \n",
-    "        x = x.view(-1, 32 * 3 * 3)  # Flatten the output of the last conv layer\n",
+    "        x = x.view(-1, 32 * 3 * 3)  # flatten last layer\n",
     "#         print(f\"Shape after view: {x.shape}\")\n",
     "        \n",
     "        x = self.dropout_fc1(F.relu(self.fc1(x)))\n",
@@ -239,17 +225,8 @@
    },
    "outputs": [],
    "source": [
-    "# Function to infer number of classes\n",
+    "# infer number of classes\n",
     "def get_num_classes(dataset):\n",
-    "    \"\"\"\n",
-    "    Get the number of unique classes in the dataset.\n",
-    "\n",
-    "    Args:\n",
-    "        dataset (Dataset): The dataset to analyze.\n",
-    "\n",
-    "    Returns:\n",
-    "        int: The number of unique classes.\n",
-    "    \"\"\"\n",
     "    unique_labels = set()\n",
     "    for _, label in dataset:\n",
     "        unique_labels.add(label)\n",
@@ -261,10 +238,10 @@
    "execution_count": null,
    "id": "966aa6c9",
    "metadata": {
-    "is_executing": true,
     "ExecuteTime": {
      "start_time": "2024-05-31T21:57:44.004958Z"
-    }
+    },
+    "is_executing": true
    },
    "outputs": [
     {
@@ -715,8 +692,6 @@
     }
    ],
    "source": [
-    "# Initialize the model, loss function, and optimizer\n",
-    "\n",
     "p_dropouts = [0.1, 0.2, 0.3, 0.4, 0.5]\n",
     "lrs = [0.0001, 0.0005, 0.001, 0.005, 0.01]\n",
     "for p_dropout in p_dropouts:\n",
@@ -731,14 +706,14 @@
     "        optimizer = optim.Adam(model.parameters(), lr=lr)\n",
     "        #print(\"Optimizer initialized\")\n",
     "        \n",
-    "        # Initialize lists to track metrics\n",
+    "        # metric tracking\n",
     "        train_losses = []\n",
     "        val_losses = []\n",
     "        train_accuracies = []\n",
     "        val_accuracies = []\n",
     "        \n",
     "        \n",
-    "        # Training loop with tqdm progress bar\n",
+    "        # Training loop\n",
     "        num_epochs = 10\n",
     "        for epoch in range(num_epochs):\n",
     "            model.train()\n",
@@ -747,7 +722,6 @@
     "            total_train = 0\n",
     "            train_loader_tqdm = tqdm(train_loader, desc=f\"Epoch {epoch+1}/{num_epochs}\", unit=\"batch\")\n",
     "            for images, labels in train_loader_tqdm:\n",
-    "                # move images and labels to device\n",
     "                images, labels = images.to(device), labels.to(device)\n",
     "                \n",
     "                optimizer.zero_grad()\n",
@@ -758,7 +732,6 @@
     "                running_loss += loss.item()\n",
     "                train_loader_tqdm.set_postfix(loss=running_loss/len(train_loader))\n",
     "                \n",
-    "                # Calculate training accuracy\n",
     "                _, predicted = torch.max(outputs.data, 1)\n",
     "                total_train += labels.size(0)\n",
     "                correct_train += (predicted == labels).sum().item()\n",
@@ -770,7 +743,7 @@
     "            \n",
     "            #print(f\"Epoch {epoch+1}, Loss: {epoch_loss}, Accuracy: {train_accuracy}%\")\n",
     "        \n",
-    "            # Validation loop\n",
+    "            # val loop\n",
     "            model.eval()\n",
     "            running_val_loss = 0.0\n",
     "            correct_val = 0\n",
@@ -779,7 +752,6 @@
     "            all_predictions = []\n",
     "            with torch.no_grad():\n",
     "                for images, labels in val_loader:\n",
-    "                    # move images and labels to device\n",
     "                    images, labels = images.to(device), labels.to(device)\n",
     "                    \n",
     "                    outputs = model(images)\n",
@@ -808,6 +780,13 @@
   {
    "cell_type": "code",
    "execution_count": 7,
+   "id": "f77d89ede61af3af",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-06-01T23:19:13.793901Z",
+     "start_time": "2024-06-01T17:18:23.293164Z"
+    }
+   },
    "outputs": [
     {
      "name": "stderr",
@@ -1051,8 +1030,6 @@
     }
    ],
    "source": [
-    "# Initialize the model, loss function, and optimizer\n",
-    "\n",
     "p_dropouts = [0.4, 0.5]\n",
     "lrs = [0.0001, 0.0005, 0.001, 0.005, 0.01]\n",
     "for p_dropout in p_dropouts:\n",
@@ -1067,14 +1044,14 @@
     "        optimizer = optim.Adam(model.parameters(), lr=lr)\n",
     "        #print(\"Optimizer initialized\")\n",
     "        \n",
-    "        # Initialize lists to track metrics\n",
+    "        # metric tracking\n",
     "        train_losses = []\n",
     "        val_losses = []\n",
     "        train_accuracies = []\n",
     "        val_accuracies = []\n",
     "        \n",
     "        \n",
-    "        # Training loop with tqdm progress bar\n",
+    "        # Training loop\n",
     "        num_epochs = 10\n",
     "        for epoch in range(num_epochs):\n",
     "            model.train()\n",
@@ -1083,7 +1060,6 @@
     "            total_train = 0\n",
     "            train_loader_tqdm = tqdm(train_loader, desc=f\"Epoch {epoch+1}/{num_epochs}\", unit=\"batch\")\n",
     "            for images, labels in train_loader_tqdm:\n",
-    "                # move images and labels to device\n",
     "                images, labels = images.to(device), labels.to(device)\n",
     "                \n",
     "                optimizer.zero_grad()\n",
@@ -1094,7 +1070,6 @@
     "                running_loss += loss.item()\n",
     "                train_loader_tqdm.set_postfix(loss=running_loss/len(train_loader))\n",
     "                \n",
-    "                # Calculate training accuracy\n",
     "                _, predicted = torch.max(outputs.data, 1)\n",
     "                total_train += labels.size(0)\n",
     "                correct_train += (predicted == labels).sum().item()\n",
@@ -1106,7 +1081,7 @@
     "            \n",
     "            #print(f\"Epoch {epoch+1}, Loss: {epoch_loss}, Accuracy: {train_accuracy}%\")\n",
     "        \n",
-    "            # Validation loop\n",
+    "            # val loop\n",
     "            model.eval()\n",
     "            running_val_loss = 0.0\n",
     "            correct_val = 0\n",
@@ -1115,7 +1090,6 @@
     "            all_predictions = []\n",
     "            with torch.no_grad():\n",
     "                for images, labels in val_loader:\n",
-    "                    # move images and labels to device\n",
     "                    images, labels = images.to(device), labels.to(device)\n",
     "                    \n",
     "                    outputs = model(images)\n",
@@ -1139,15 +1113,7 @@
     "        \n",
     "        \n",
     "        print(\"Training complete\")"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2024-06-01T23:19:13.793901Z",
-     "start_time": "2024-06-01T17:18:23.293164Z"
-    }
-   },
-   "id": "f77d89ede61af3af"
+   ]
   },
   {
    "cell_type": "code",
@@ -1156,7 +1122,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Plot training and validation loss\n",
     "plt.figure(figsize=(12, 5))\n",
     "\n",
     "plt.subplot(1, 2, 1)\n",
@@ -1167,7 +1132,6 @@
     "plt.title('Training and Validation Loss Over Epochs')\n",
     "plt.legend()\n",
     "\n",
-    "# Plot training and validation accuracy\n",
     "plt.subplot(1, 2, 2)\n",
     "plt.plot(train_accuracies, label='Training Accuracy')\n",
     "plt.plot(val_accuracies, label='Validation Accuracy')\n",
@@ -1187,10 +1151,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Generate confusion matrix\n",
     "cm = confusion_matrix(all_labels, all_predictions)\n",
     "cmd = ConfusionMatrixDisplay(cm, display_labels=[i for i in range(num_classes)])\n",
-    "fig, ax = plt.subplots(figsize=(10, 10))  # Adjust the size\n",
+    "fig, ax = plt.subplots(figsize=(10, 10)) \n",
     "cmd.plot(ax=ax, xticks_rotation='vertical')\n",
     "plt.title('Confusion Matrix')\n",
     "plt.show()"
