--- a/Image preprocessing new data.ipynb
+++ b/Image preprocessing new data.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "id": "c42fd108",
    "metadata": {
     "ExecuteTime": {
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "id": "dc9420a9",
    "metadata": {
     "ExecuteTime": {
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "id": "ab600ec7",
    "metadata": {
     "ExecuteTime": {
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "id": "06ddc2f8",
    "metadata": {
     "ExecuteTime": {
@@ -113,16 +113,6 @@
    "outputs": [],
    "source": [
     "def apply_custom_sharpen(image):\n",
-    "    \"\"\"\n",
-    "    Applies a custom sharpening filter to an image - filter taken from paper\n",
-    "\n",
-    "    Args:\n",
-    "        image (Image): The input image.\n",
-    "\n",
-    "    Returns:\n",
-    "        Image: The sharpened image.\n",
-    "    \"\"\"\n",
-    "    # Define a 3x3 sharpening kernel\n",
     "    kernel = [\n",
     "        0, -1, 0,\n",
     "        -1, 6, -1,\n",
@@ -135,14 +125,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "id": "6cfac7c651a84b37",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-06-02T04:53:28.564185Z",
      "start_time": "2024-06-02T04:53:28.554319Z"
     },
-    "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
     }
@@ -150,27 +139,16 @@
    "outputs": [],
    "source": [
     "def add_salt_and_pepper_noise(image, amount=0.05, salt_vs_pepper=0.5):\n",
-    "    \"\"\"\n",
-    "    Adds salt and pepper noise to an image.\n",
-    "    \n",
-    "    Args:\n",
-    "        image (PIL.Image): Input image.\n",
-    "        amount (float): Proportion of image pixels to replace with noise.\n",
-    "        salt_vs_pepper (float): Proportion of salt noise relative to pepper noise.\n",
-    "    \n",
-    "    Returns:\n",
-    "        PIL.Image: Image with salt and pepper noise added.\n",
-    "    \"\"\"\n",
     "    image_array = np.array(image)\n",
     "    row, col = image_array.shape\n",
     "    num_salt = np.ceil(amount * image_array.size * salt_vs_pepper)\n",
     "    num_pepper = np.ceil(amount * image_array.size * (1.0 - salt_vs_pepper))\n",
     "\n",
-    "    # Add salt noise (white pixels)\n",
+    "    # salt\n",
     "    coords = [np.random.randint(0, i - 1, int(num_salt)) for i in image_array.shape]\n",
     "    image_array[coords[0], coords[1]] = 1\n",
     "\n",
-    "    # Add pepper noise (black pixels)\n",
+    "    # pepper\n",
     "    coords = [np.random.randint(0, i - 1, int(num_pepper)) for i in image_array.shape]\n",
     "    image_array[coords[0], coords[1]] = 0\n",
     "\n",
@@ -179,14 +157,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "id": "9895b87ae6ff2325",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-06-02T04:53:28.564389Z",
      "start_time": "2024-06-02T04:53:28.556374Z"
     },
-    "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
     }
@@ -194,21 +171,19 @@
    "outputs": [],
    "source": [
     "def random_rotation(image, angle_range=(-10, 10)):\n",
-    "    \"\"\"Applies a random rotation to the image within the specified angle range.\"\"\"\n",
     "    angle = random.uniform(angle_range[0], angle_range[1])\n",
     "    return image.rotate(angle)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "id": "46b5e72d8ad801d7",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-06-02T04:53:28.564462Z",
      "start_time": "2024-06-02T04:53:28.557944Z"
     },
-    "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
     }
@@ -216,18 +191,15 @@
    "outputs": [],
    "source": [
     "def random_zoom(image, zoom_range=(0.9, 1.1)):\n",
-    "    \"\"\"Applies a random zoom to the image.\"\"\"\n",
     "    zoom_factor = random.uniform(zoom_range[0], zoom_range[1])\n",
     "    width, height = image.size\n",
     "    new_width, new_height = int(width * zoom_factor), int(height * zoom_factor)\n",
     "    image = image.resize((new_width, new_height), Image.LANCZOS)\n",
     "    if zoom_factor < 1:\n",
-    "        # Pad the image\n",
     "        pad_width = (width - new_width) // 2\n",
     "        pad_height = (height - new_height) // 2\n",
     "        image = ImageOps.expand(image, (pad_width, pad_height, width - new_width - pad_width, height - new_height - pad_height), fill=0)\n",
     "    else:\n",
-    "        # Crop the image\n",
     "        left = (new_width - width) // 2\n",
     "        top = (new_height - height) // 2\n",
     "        image = image.crop((left, top, left + width, top + height))\n",
@@ -236,14 +208,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 9,
    "id": "9a67e53723ebc23b",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-06-02T04:53:28.564543Z",
      "start_time": "2024-06-02T04:53:28.561048Z"
     },
-    "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
     }
@@ -251,7 +222,6 @@
    "outputs": [],
    "source": [
     "def random_shift(image, width_shift_range=0.1, height_shift_range=0.1):\n",
-    "    \"\"\"Applies a random width and height shift to the image.\"\"\"\n",
     "    width, height = image.size\n",
     "    max_width_shift = int(width * width_shift_range)\n",
     "    max_height_shift = int(height * height_shift_range)\n",
@@ -262,14 +232,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 10,
    "id": "a6e6f722681f3f95",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-06-02T04:53:28.564881Z",
      "start_time": "2024-06-02T04:53:28.562908Z"
     },
-    "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
     }
@@ -277,7 +246,6 @@
    "outputs": [],
    "source": [
     "def random_horizontal_flip(image):\n",
-    "    \"\"\"Randomly flips the image horizontally.\"\"\"\n",
     "    if random.random() < 0.5:\n",
     "        image = ImageOps.mirror(image)\n",
     "    return image"
@@ -285,14 +253,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 11,
    "id": "64d36ad7963a787a",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-06-02T04:53:28.567901Z",
      "start_time": "2024-06-02T04:53:28.564574Z"
     },
-    "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
     }
@@ -300,7 +267,6 @@
    "outputs": [],
    "source": [
     "def random_crop(image, crop_size=(50, 50)):\n",
-    "    \"\"\"Randomly crops the image to the specified size.\"\"\"\n",
     "    width, height = image.size\n",
     "    new_width, new_height = crop_size\n",
     "    left = random.randint(0, width - new_width)\n",
@@ -310,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 12,
    "id": "d557e260",
    "metadata": {
     "ExecuteTime": {
@@ -321,44 +287,28 @@
    "outputs": [],
    "source": [
     "def preprocess_image(image_path):\n",
-    "    \"\"\"\n",
-    "    Preprocesses an image by converting it to grayscale, applying a custom sharpening filter,\n",
-    "    resizing it to 50x50 pixels, and normalizing the pixel values to the range [0, 1].\n",
-    "\n",
-    "    Args:\n",
-    "        image_path (str): Path to the input image.\n",
-    "\n",
-    "    Returns:\n",
-    "        Image: The preprocessed image.\n",
-    "    \"\"\"\n",
-    "    # Open image and convert to grayscale\n",
     "    image = Image.open(image_path).convert('L')\n",
     "    \n",
-    "    #data augmentation\n",
     "    image = random_rotation(image)\n",
     "    image = random_zoom(image)\n",
     "    image = random_shift(image)\n",
     "    image = random_horizontal_flip(image)\n",
     "    \n",
-    "    # Resize the image to 50x50 pixels\n",
     "    resized_image = image.resize((50, 50))\n",
     "    \n",
-    "    # Apply the custom sharpening filter\n",
     "    sharpened_image = apply_custom_sharpen(resized_image)\n",
     "    \n",
-    "    #add salt and pepper noise \n",
     "    noisy_image = add_salt_and_pepper_noise(sharpened_image)\n",
     "    \n",
-    "    # Normalize the pixel values to the range [0, 1]\n",
     "    normalized_image = np.array(noisy_image) / 255.0\n",
+    "#     normalized_image = np.array(sharpened_image) / 255.0\n",
     "    \n",
-    "    # Convert back to an image format\n",
     "    return Image.fromarray((normalized_image * 255).astype(np.uint8))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 13,
    "id": "075923fb",
    "metadata": {
     "ExecuteTime": {
@@ -369,30 +319,17 @@
    "outputs": [],
    "source": [
     "def process_directory(input_dir, output_dir):\n",
-    "    \"\"\"\n",
-    "    Processes all images in the specified directory and its subdirectories,\n",
-    "    applying the preprocessing steps and saving the results to the output directory,\n",
-    "    maintaining the original directory structure.\n",
-    "\n",
-    "    Args:\n",
-    "        input_dir (str): Path to the input directory containing images.\n",
-    "        output_dir (str): Path to the output directory where preprocessed images will be saved.\n",
-    "    \"\"\"\n",
     "    for root, _, files in os.walk(input_dir):\n",
     "        for file in files:\n",
-    "            # Process only color images with specified file extensions\n",
-    "            # for this dataset all images are color\n",
     "            if file.lower().endswith(('.png', '.jpg', '.jpeg', '.tiff', '.bmp', '.gif')):\n",
     "                file_path = os.path.join(root, file)\n",
     "                \n",
-    "                # Determine the new file path in the output directory\n",
     "                relative_path = os.path.relpath(root, input_dir)\n",
     "                output_path = os.path.join(output_dir, relative_path, file)\n",
     "                \n",
-    "                # Ensure the output directory exists\n",
     "                os.makedirs(os.path.dirname(output_path), exist_ok=True)\n",
     "                \n",
-    "                # Preprocess and save the image\n",
+    "                # Preprocess and save\n",
     "                try:\n",
     "                    processed_image = preprocess_image(file_path)\n",
     "                    processed_image.save(output_path)\n",
@@ -402,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 16,
    "id": "6fe47aac",
    "metadata": {
     "ExecuteTime": {
@@ -431,7 +368,6 @@
    "execution_count": null,
    "id": "48d5f2a6a8fb7ff9",
    "metadata": {
-    "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
     }
@@ -456,7 +392,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
