--- a/Image preprocessing.ipynb
+++ b/Image preprocessing.ipynb
@@ -113,16 +113,6 @@
    "outputs": [],
    "source": [
     "def apply_custom_sharpen(image):\n",
-    "    \"\"\"\n",
-    "    Applies a custom sharpening filter to an image - filter taken from paper\n",
-    "\n",
-    "    Args:\n",
-    "        image (Image): The input image.\n",
-    "\n",
-    "    Returns:\n",
-    "        Image: The sharpened image.\n",
-    "    \"\"\"\n",
-    "    # Define a 3x3 sharpening kernel\n",
     "    kernel = [\n",
     "        0, -1, 0,\n",
     "        -1, 6, -1,\n",
@@ -136,159 +126,135 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "outputs": [],
-   "source": [
-    "def add_salt_and_pepper_noise(image, amount=0.05, salt_vs_pepper=0.5):\n",
-    "    \"\"\"\n",
-    "    Adds salt and pepper noise to an image.\n",
-    "    \n",
-    "    Args:\n",
-    "        image (PIL.Image): Input image.\n",
-    "        amount (float): Proportion of image pixels to replace with noise.\n",
-    "        salt_vs_pepper (float): Proportion of salt noise relative to pepper noise.\n",
-    "    \n",
-    "    Returns:\n",
-    "        PIL.Image: Image with salt and pepper noise added.\n",
-    "    \"\"\"\n",
-    "    image_array = np.array(image)\n",
-    "    row, col = image_array.shape\n",
-    "    num_salt = np.ceil(amount * image_array.size * salt_vs_pepper)\n",
-    "    num_pepper = np.ceil(amount * image_array.size * (1.0 - salt_vs_pepper))\n",
-    "\n",
-    "    # Add salt noise (white pixels)\n",
-    "    coords = [np.random.randint(0, i - 1, int(num_salt)) for i in image_array.shape]\n",
-    "    image_array[coords[0], coords[1]] = 1\n",
-    "\n",
-    "    # Add pepper noise (black pixels)\n",
-    "    coords = [np.random.randint(0, i - 1, int(num_pepper)) for i in image_array.shape]\n",
-    "    image_array[coords[0], coords[1]] = 0\n",
-    "\n",
-    "    return Image.fromarray(image_array)"
-   ],
+   "id": "6cfac7c651a84b37",
    "metadata": {
-    "collapsed": false,
     "ExecuteTime": {
      "end_time": "2024-06-02T04:53:28.564185Z",
      "start_time": "2024-06-02T04:53:28.554319Z"
     }
    },
-   "id": "6cfac7c651a84b37"
+   "outputs": [],
+   "source": [
+    "def add_salt_and_pepper_noise(image, amount=0.05, salt_vs_pepper=0.5):\n",
+    "    image_array = np.array(image)\n",
+    "    row, col = image_array.shape\n",
+    "    num_salt = np.ceil(amount * image_array.size * salt_vs_pepper)\n",
+    "    num_pepper = np.ceil(amount * image_array.size * (1.0 - salt_vs_pepper))\n",
+    "\n",
+    "    # salt\n",
+    "    coords = [np.random.randint(0, i - 1, int(num_salt)) for i in image_array.shape]\n",
+    "    image_array[coords[0], coords[1]] = 1\n",
+    "\n",
+    "    # pepper\n",
+    "    coords = [np.random.randint(0, i - 1, int(num_pepper)) for i in image_array.shape]\n",
+    "    image_array[coords[0], coords[1]] = 0\n",
+    "\n",
+    "    return Image.fromarray(image_array)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 55,
-   "outputs": [],
-   "source": [
-    "def random_rotation(image, angle_range=(-10, 10)):\n",
-    "    \"\"\"Applies a random rotation to the image within the specified angle range.\"\"\"\n",
-    "    angle = random.uniform(angle_range[0], angle_range[1])\n",
-    "    return image.rotate(angle)"
-   ],
+   "id": "9895b87ae6ff2325",
    "metadata": {
-    "collapsed": false,
     "ExecuteTime": {
      "end_time": "2024-06-02T04:53:28.564389Z",
      "start_time": "2024-06-02T04:53:28.556374Z"
     }
    },
-   "id": "9895b87ae6ff2325"
+   "outputs": [],
+   "source": [
+    "def random_rotation(image, angle_range=(-10, 10)):\n",
+    "    angle = random.uniform(angle_range[0], angle_range[1])\n",
+    "    return image.rotate(angle)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 56,
-   "outputs": [],
-   "source": [
-    "def random_zoom(image, zoom_range=(0.9, 1.1)):\n",
-    "    \"\"\"Applies a random zoom to the image.\"\"\"\n",
-    "    zoom_factor = random.uniform(zoom_range[0], zoom_range[1])\n",
-    "    width, height = image.size\n",
-    "    new_width, new_height = int(width * zoom_factor), int(height * zoom_factor)\n",
-    "    image = image.resize((new_width, new_height), Image.LANCZOS)\n",
-    "    if zoom_factor < 1:\n",
-    "        # Pad the image\n",
-    "        pad_width = (width - new_width) // 2\n",
-    "        pad_height = (height - new_height) // 2\n",
-    "        image = ImageOps.expand(image, (pad_width, pad_height, width - new_width - pad_width, height - new_height - pad_height), fill=0)\n",
-    "    else:\n",
-    "        # Crop the image\n",
-    "        left = (new_width - width) // 2\n",
-    "        top = (new_height - height) // 2\n",
-    "        image = image.crop((left, top, left + width, top + height))\n",
-    "    return image"
-   ],
+   "id": "46b5e72d8ad801d7",
    "metadata": {
-    "collapsed": false,
     "ExecuteTime": {
      "end_time": "2024-06-02T04:53:28.564462Z",
      "start_time": "2024-06-02T04:53:28.557944Z"
     }
    },
-   "id": "46b5e72d8ad801d7"
+   "outputs": [],
+   "source": [
+    "def random_zoom(image, zoom_range=(0.9, 1.1)):\n",
+    "    zoom_factor = random.uniform(zoom_range[0], zoom_range[1])\n",
+    "    width, height = image.size\n",
+    "    new_width, new_height = int(width * zoom_factor), int(height * zoom_factor)\n",
+    "    image = image.resize((new_width, new_height), Image.LANCZOS)\n",
+    "    if zoom_factor < 1:\n",
+    "        pad_width = (width - new_width) // 2\n",
+    "        pad_height = (height - new_height) // 2\n",
+    "        image = ImageOps.expand(image, (pad_width, pad_height, width - new_width - pad_width, height - new_height - pad_height), fill=0)\n",
+    "    else:\n",
+    "        left = (new_width - width) // 2\n",
+    "        top = (new_height - height) // 2\n",
+    "        image = image.crop((left, top, left + width, top + height))\n",
+    "    return image"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 57,
+   "id": "9a67e53723ebc23b",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-06-02T04:53:28.564543Z",
+     "start_time": "2024-06-02T04:53:28.561048Z"
+    }
+   },
    "outputs": [],
    "source": [
     "def random_shift(image, width_shift_range=0.1, height_shift_range=0.1):\n",
-    "    \"\"\"Applies a random width and height shift to the image.\"\"\"\n",
     "    width, height = image.size\n",
     "    max_width_shift = int(width * width_shift_range)\n",
     "    max_height_shift = int(height * height_shift_range)\n",
     "    width_shift = random.randint(-max_width_shift, max_width_shift)\n",
     "    height_shift = random.randint(-max_height_shift, max_height_shift)\n",
     "    return image.transform(image.size, Image.AFFINE, (1, 0, width_shift, 0, 1, height_shift), resample=Image.BICUBIC)\n"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2024-06-02T04:53:28.564543Z",
-     "start_time": "2024-06-02T04:53:28.561048Z"
-    }
-   },
-   "id": "9a67e53723ebc23b"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 58,
-   "outputs": [],
-   "source": [
-    "def random_horizontal_flip(image):\n",
-    "    \"\"\"Randomly flips the image horizontally.\"\"\"\n",
-    "    if random.random() < 0.5:\n",
-    "        image = ImageOps.mirror(image)\n",
-    "    return image"
-   ],
+   "id": "a6e6f722681f3f95",
    "metadata": {
-    "collapsed": false,
     "ExecuteTime": {
      "end_time": "2024-06-02T04:53:28.564881Z",
      "start_time": "2024-06-02T04:53:28.562908Z"
     }
    },
-   "id": "a6e6f722681f3f95"
+   "outputs": [],
+   "source": [
+    "def random_horizontal_flip(image):\n",
+    "    if random.random() < 0.5:\n",
+    "        image = ImageOps.mirror(image)\n",
+    "    return image"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 59,
-   "outputs": [],
-   "source": [
-    "def random_crop(image, crop_size=(50, 50)):\n",
-    "    \"\"\"Randomly crops the image to the specified size.\"\"\"\n",
-    "    width, height = image.size\n",
-    "    new_width, new_height = crop_size\n",
-    "    left = random.randint(0, width - new_width)\n",
-    "    top = random.randint(0, height - new_height)\n",
-    "    return image.crop((left, top, left + new_width, top + new_height))"
-   ],
+   "id": "64d36ad7963a787a",
    "metadata": {
-    "collapsed": false,
     "ExecuteTime": {
      "end_time": "2024-06-02T04:53:28.567901Z",
      "start_time": "2024-06-02T04:53:28.564574Z"
     }
    },
-   "id": "64d36ad7963a787a"
+   "outputs": [],
+   "source": [
+    "def random_crop(image, crop_size=(50, 50)):\n",
+    "    width, height = image.size\n",
+    "    new_width, new_height = crop_size\n",
+    "    left = random.randint(0, width - new_width)\n",
+    "    top = random.randint(0, height - new_height)\n",
+    "    return image.crop((left, top, left + new_width, top + new_height))"
+   ]
   },
   {
    "cell_type": "code",
@@ -303,38 +269,21 @@
    "outputs": [],
    "source": [
     "def preprocess_image(image_path):\n",
-    "    \"\"\"\n",
-    "    Preprocesses an image by converting it to grayscale, applying a custom sharpening filter,\n",
-    "    resizing it to 50x50 pixels, and normalizing the pixel values to the range [0, 1].\n",
-    "\n",
-    "    Args:\n",
-    "        image_path (str): Path to the input image.\n",
-    "\n",
-    "    Returns:\n",
-    "        Image: The preprocessed image.\n",
-    "    \"\"\"\n",
-    "    # Open image and convert to grayscale\n",
     "    image = Image.open(image_path).convert('L')\n",
     "    \n",
-    "    #data augmentation\n",
     "    image = random_rotation(image)\n",
     "    image = random_zoom(image)\n",
     "    image = random_shift(image)\n",
     "    image = random_horizontal_flip(image)\n",
     "    \n",
-    "    # Resize the image to 50x50 pixels\n",
     "    resized_image = image.resize((50, 50))\n",
     "    \n",
-    "    # Apply the custom sharpening filter\n",
     "    sharpened_image = apply_custom_sharpen(resized_image)\n",
     "    \n",
-    "    #add salt and pepper noise \n",
     "    noisy_image = add_salt_and_pepper_noise(sharpened_image)\n",
     "    \n",
-    "    # Normalize the pixel values to the range [0, 1]\n",
     "    normalized_image = np.array(noisy_image) / 255.0\n",
     "    \n",
-    "    # Convert back to an image format\n",
     "    return Image.fromarray((normalized_image * 255).astype(np.uint8))"
    ]
   },
@@ -351,29 +300,17 @@
    "outputs": [],
    "source": [
     "def process_directory(input_dir, output_dir):\n",
-    "    \"\"\"\n",
-    "    Processes all color images in the specified directory and its subdirectories,\n",
-    "    applying the preprocessing steps and saving the results to the output directory,\n",
-    "    maintaining the original directory structure.\n",
-    "\n",
-    "    Args:\n",
-    "        input_dir (str): Path to the input directory containing images.\n",
-    "        output_dir (str): Path to the output directory where preprocessed images will be saved.\n",
-    "    \"\"\"\n",
     "    for root, _, files in os.walk(input_dir):\n",
     "        for file in files:\n",
-    "            # Process only color images with specified file extensions\n",
     "            if file.lower().startswith('color') and file.lower().endswith(('.png', '.jpg', '.jpeg', '.tiff', '.bmp', '.gif')):\n",
     "                file_path = os.path.join(root, file)\n",
     "                \n",
-    "                # Determine the new file path in the output directory\n",
     "                relative_path = os.path.relpath(root, input_dir)\n",
     "                output_path = os.path.join(output_dir, relative_path, file)\n",
     "                \n",
-    "                # Ensure the output directory exists\n",
     "                os.makedirs(os.path.dirname(output_path), exist_ok=True)\n",
     "                \n",
-    "                # Preprocess and save the image\n",
+    "                # Preprocess and save \n",
     "                try:\n",
     "                    processed_image = preprocess_image(file_path)\n",
     "                    processed_image.save(output_path)\n",
@@ -410,12 +347,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "48d5f2a6a8fb7ff9",
+   "metadata": {},
    "outputs": [],
-   "source": [],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "48d5f2a6a8fb7ff9"
+   "source": []
   }
  ],
  "metadata": {
