--- a/Train-val-test split-new data.ipynb
+++ b/Train-val-test split-new data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 1,
    "id": "eaf5c4d3",
    "metadata": {},
    "outputs": [],
@@ -15,18 +15,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 2,
    "id": "6e078cdb",
    "metadata": {},
    "outputs": [],
    "source": [
     "def create_directory_structure(base_dir):\n",
-    "    \"\"\"\n",
-    "    Create the directory structure for the dataset.\n",
-    "\n",
-    "    Args:\n",
-    "        base_dir (str): Base directory where train, val, and test directories will be created.\n",
-    "    \"\"\"\n",
     "    for dataset in ['train', 'val', 'test']:\n",
     "        path = os.path.join(base_dir, dataset)\n",
     "        os.makedirs(path, exist_ok=True)"
@@ -34,24 +28,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 3,
    "id": "e8017d9e",
    "metadata": {},
    "outputs": [],
    "source": [
     "def generate_unique_filename(file_path, target_dir):\n",
-    "    \"\"\"\n",
-    "    Generate a unique filename to prevent overwriting.\n",
-    "\n",
-    "    Args:\n",
-    "        file_path (str): The original file path.\n",
-    "        target_dir (str): The target directory where the file will be copied.\n",
-    "\n",
-    "    Returns:\n",
-    "        str: A unique filename.\n",
-    "    \"\"\"\n",
     "    file_name, file_ext = os.path.splitext(os.path.basename(file_path))\n",
-    "    # Create a unique identifier based on the original file path\n",
+    "    # create identifier\n",
     "    unique_id = hashlib.md5(file_path.encode()).hexdigest()\n",
     "    unique_filename = f\"{file_name}_{unique_id}{file_ext}\"\n",
     "    return unique_filename"
@@ -59,21 +43,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 4,
    "id": "ad091d24",
    "metadata": {},
    "outputs": [],
    "source": [
     "# added in letter here \n",
     "def copy_files(file_list, source_base_dir, target_dir):\n",
-    "    \"\"\"\n",
-    "    Copy files from source to target directory with unique filenames.\n",
-    "\n",
-    "    Args:\n",
-    "        file_list (list): List of file paths relative to the source base directory.\n",
-    "        source_base_dir (str): Source base directory.\n",
-    "        target_dir (str): Target directory where files will be copied.\n",
-    "    \"\"\"\n",
     "    for file_path in file_list:\n",
     "        source_path = os.path.join(source_base_dir, file_path)\n",
     "        letter = file_path.split(\"/\")[0]\n",
@@ -85,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 5,
    "id": "b45e75c2",
    "metadata": {},
    "outputs": [
@@ -101,11 +77,9 @@
     }
    ],
    "source": [
-    "# Define the base directory and user/letter directories\n",
-    "source_base_dir = 'newdata_preprocessed_50x50/'  # Original dataset directory\n",
-    "target_base_dir = 'new_data_50x50_split/'  # New directory for split data\n",
+    "source_base_dir = 'newdata_preprocessed_50x50/'  \n",
+    "target_base_dir = 'new_data_50x50_split/'  \n",
     "\n",
-    "# Create the directory structure for train, val, test\n",
     "create_directory_structure(target_base_dir)\n",
     "\n",
     "# letters in the dataset\n",
@@ -130,7 +104,7 @@
     "train_paths, test_paths = train_test_split(file_paths, test_size=(1 - train_ratio), random_state=random_seed)\n",
     "val_paths, test_paths = train_test_split(test_paths, test_size=(test_ratio / (val_ratio + test_ratio)), random_state=random_seed)\n",
     "\n",
-    "# Copy the files to the respective directories\n",
+    "# Copy the files to directories\n",
     "copy_files(train_paths, source_base_dir, os.path.join(target_base_dir, 'train'))\n",
     "copy_files(val_paths, source_base_dir, os.path.join(target_base_dir, 'val'))\n",
     "copy_files(test_paths, source_base_dir, os.path.join(target_base_dir, 'test'))\n",
@@ -168,7 +142,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
