--- a/landmark_preprocess.ipynb
+++ b/landmark_preprocess.ipynb
@@ -20,7 +20,6 @@
    "outputs": [],
    "source": [
     "def preprocess_image(image_path):\n",
-    "    # Resize and normalize the image\n",
     "    image = Image.open(image_path)\n",
     "    resized_image = image.resize((224, 224))\n",
     "    normalized_image = np.array(resized_image) / 255.0\n",
@@ -35,30 +34,18 @@
    "outputs": [],
    "source": [
     "def process_directory(input_dir, output_dir):\n",
-    "    \"\"\"\n",
-    "    Processes all color images in the specified directory and its subdirectories,\n",
-    "    applying the preprocessing steps and saving the results to the output directory,\n",
-    "    maintaining the original directory structure.\n",
-    "\n",
-    "    Args:\n",
-    "        input_dir (str): Path to the input directory containing images.\n",
-    "        output_dir (str): Path to the output directory where preprocessed images will be saved.\n",
-    "    \"\"\"\n",
     "    for root, _, files in os.walk(input_dir):\n",
     "        for file in files:\n",
-    "            # Process only color images with specified file extensions\n",
     "            if file.lower().startswith('color') and file.lower().endswith(('.png', '.jpg', '.jpeg', '.tiff', '.bmp', '.gif')):\n",
     "#             if file.lower().endswith(('.png', '.jpg', '.jpeg', '.tiff', '.bmp', '.gif')):\n",
     "                file_path = os.path.join(root, file)\n",
     "                \n",
-    "                # Determine the new file path in the output directory\n",
     "                relative_path = os.path.relpath(root, input_dir)\n",
     "                output_path = os.path.join(output_dir, relative_path, file)\n",
     "                \n",
-    "                # Ensure the output directory exists\n",
     "                os.makedirs(os.path.dirname(output_path), exist_ok=True)\n",
     "                \n",
-    "                # Preprocess and save the image\n",
+    "                # Preprocess and save \n",
     "                try:\n",
     "                    processed_image = preprocess_image(file_path)\n",
     "                    processed_image.save(output_path)\n",
